Fix max-width for #content-sidebar-wrap on single photo templates

--- a/public/stylus/l4c.styl
+++ b/public/stylus/l4c.styl
@@ -1226,15 +1226,13 @@ body.single
 	#wrap
 		padding-top 0
 
-	// #header .wrap
-	// #img-info .wrap
-	// #content-sidebar-wrap
-	// 	max-width 1000px
+	#content-sidebar-wrap
+		max-width 960px
 
-	#content-sidebar-wrap nav.pagination
-		float right
-		margin 0
-		padding 0
+		nav.pagination
+			float right
+			margin 0
+			padding 0
 
 body.sizes
 	#breadcrumb
